--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href=C:\HTML\HTML1130-0\.css\page1.html>ntroduction</a>
         <p></p>
     <u1>
-        <big><big><big><big><strong><ly>↓GameRepository↓</ly></strong></big></big></big></big>
+       　<strong><ly>↓GameRepository↓</ly></strong>
         <p></p><big><big><a href="https://github.com/k3036/-lockKuzushi.git">BlockDestryRepository</font></a></big></big>
         <p></p>
         <div class=BlockDestry>
