--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p></p>
     <u1>
        　<strong><ly>↓GameRepository↓</ly></strong>
-        <p></p><big><big><a href="https://github.com/k3036/-lockKuzushi.git">BlockDestryRepository</font></a></big></big>
+        <p></p><big><big> <font size="7"><a href="https://github.com/k3036/-lockKuzushi.git">BlockDestryRepository</font></a></big></big>
         <p></p>
         <div class=BlockDestry>
         <video width="2500"height="2500" src="de5aed74-2f56-4c02-8d2b-3791121afbe7.mp4"loop autoplay muted></video>
