--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/////PCバージョン/////
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -14,7 +14,7 @@
 </head>
     
     <div style="text-align:center">
-        <a href=C:\HTML\HTML1130-0\.css\page1.html>ntroduction</a>
+        <big><big><big><big><big><big><big><big><big><big><big><big><big> <a href=https://k3036.github.io/1201-4/>C#</a></big></big></big></big></big></big></big></big></big></big></big></big></big></big>
         <p></p>
     <u1>
         <big><big><big><big><big><big><big><big><big><big><big><big><big><big><big><big><big><big><strong><ly>↓GameRepository↓</ly></strong></big></big></big></big></big></big></big></big></big></big></big></big></big></big>
